--- a/css/sophie_styles.css
+++ b/css/sophie_styles.css
@@ -34,3 +34,80 @@ img {
     max-width: 100%; /* Bredde må maks fylde 100% */
     height: auto; /* Højden skal tilpasse sig */
 }
+
+.bg-primary{
+    background-color: lightcoral;
+}
+.text-primary{
+    color: red;
+}
+.text-center{
+    color: white;
+}
+.bg-secondary{
+    background-color: lightgrey;
+}
+
+.container-fluid{
+    height: 250px;
+
+}
+.text-secondary{
+    flex-direction: column;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.image-large{
+    min-height: 250px;
+    background-color: lightcoral;
+}
+
+.image-small{
+    width: 200px;
+    height: 250px;
+    background-color: lightgrey;
+   align-content: center;
+}
+
+.image-small-small{
+    width: 50px;
+    height: 25px;
+    color: red;
+}
+
+
+.container, .row [class*='col']{
+    transition: max-width .3s ease-in-out;
+}
+.navbar-container{
+    position: absolute;
+}
+.nav{
+    transition: max-height .2s ease-in-out;
+    max-height: 0;
+    overflow: hidden;
+}
+
+.nav.show{
+    transition: max-height .2s ease-in-out;
+    max-height: 100vh;
+}
+
+.toggle{
+    cursor:pointer;
+}
+
+@media all and (min-width: 322px)
+    .container{
+
+    }
+
+@media all and (min-width: 992px){
+    .nav{
+        max-height: none;
+    }
+
+
+}
