--- a/css/mikkel_styles.css
+++ b/css/mikkel_styles.css
@@ -1,4 +1,4 @@
-* { /* Gælder alt på hele siden */
+* {
     box-sizing: border-box; /* Bokse har altid den størrelse man giver uanset om der tilføjes margen, padding mv. */
 }
 
