--- a/css/loay_styles.css
+++ b/css/loay_styles.css
@@ -12,6 +12,12 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0; /* Ingen ydre margen fra overskrifter */
     padding: 0; /* Ingen indre margen fra overskrifter */
 }
+a{
+    text-decoration: none;
+    color: #FFFFFF;
+     font-family: 'Josefin Sans', sans-serif;
+    font-size: 39px;
+}
 
 ul, ol {
     margin: 2px 10px 2px 10px; /* Mindre margen på punkter */
@@ -33,4 +39,63 @@ img {
     display: block; /* Billeder er et element (laver linjeskift) */
     max-width: 100%; /* Bredde må maks fylde 100% */
     height: auto; /* Højden skal tilpasse sig */
+}
+.logo{
+    display: flex;
+    font-size: 46px;
+    font-family: 'Sacramento', cursive;
+    color: #FFFFFF;
+    text-align: center;
+
+
+
+}
+.cole{
+    background-color: #CBD6E7;
+}
+.a1{
+    padding-left: 10px;
+}
+.bars{
+
+}
+.icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.text_center{
+    text-align: center;
+}
+
+.pa{
+   margin: 5px 0 12px 0;
+}
+.nav.show{
+    transition: max-height .2s ease-in-out;
+    max-height: 100vh;
+    overflow:hidden ;
+}
+.nav{
+    transition: max-height .2s ease-in-out;
+    overflow:hidden;
+    max-height: 0;
+
+}
+.container,.row[ class*='col']{
+    transition: max-width.4s ease-in-out;
+}
+.toggle{
+    cursor: pointer;
+}
+.container > .row{
+    margin-top: 10rem;
+}
+
+@media all and (min-width:992px ){
+    .nav{
+        max-height: none;
+    }
+
 }
