--- a/css/amanda_styles.css
+++ b/css/amanda_styles.css
@@ -13,6 +13,13 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0; /* Ingen indre margen fra overskrifter */
 }
 
+a{
+    text-decoration: none;
+    color: #FFFFFF;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 39px;
+}
+
 ul, ol {
     margin: 2px 10px 2px 10px; /* Mindre margen på punkter */
     padding: 0; /* Ingen indre margen fra lister */
@@ -35,7 +42,7 @@ img {
     height: auto; /* Højden skal tilpasse sig */
 }
 
-
+/*Farver*/
 .bg-primary{
     background-color: #f7fbff;
 }
@@ -51,3 +58,77 @@ img {
 .text-secondary{
     color: #f7fbff;
 }
+
+/*Skrifttyper*/
+.josefin_sans_font{
+    font-family: "Josefin Sans";
+}
+
+.sans_serif_font{
+    font-family: sans-serif;
+}
+
+/*Topbar*/
+.logo{
+    display: flex;
+    font-size: 46px;
+    font-family: 'Sacramento', cursive;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+.cole{
+    background-color: #CBD6E7;
+}
+
+.a1{
+    padding-left: 10px;
+}
+
+.bars{
+
+}
+.icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.text_center{
+    text-align: center;
+}
+
+.pa{
+    margin: 5px 0 12px 0;
+}
+
+.nav.show{
+    transition: max-height .2s ease-in-out;
+    max-height: 100vh;
+    overflow:hidden ;
+}
+
+.nav{
+    transition: max-height .2s ease-in-out;
+    overflow:hidden;
+    max-height: 0;
+}
+
+.container,.row[ class*='col']{
+    transition: max-width.4s ease-in-out;
+}
+
+.toggle{
+    cursor: pointer;
+}
+
+.container > .row{
+    margin-top: 10rem;
+}
+
+@media all and (min-width:992px ) {
+    .nav {
+        max-height: none;
+    }
+}
+/*Topbar slut*/
