Hentet Loay´s header

--- a/css/sophie_styles.css
+++ b/css/sophie_styles.css
@@ -79,8 +79,6 @@ img {
    align-content: center;
     display: flex;
     flex-direction: column;
-
-
 }
 
 .salgsbillede{
@@ -105,16 +103,6 @@ img {
 .navbar-container{
     position: absolute;
 }
-.nav{
-    transition: max-height .2s ease-in-out;
-    max-height: 0;
-    overflow: hidden;
-}
-
-.nav.show{
-    transition: max-height .2s ease-in-out;
-    max-height: 100vh;
-}
 
 .toggle{
     cursor:pointer;
@@ -124,7 +112,6 @@ img {
 .coverbillede1{
     height: 250px;
     width: 175px;
-
 }
 
 .coverbillede2{
@@ -158,7 +145,56 @@ img {
     color: #f7fbff;
 }
 
+.logo{
+    display: flex;
+    font-size: 46px;
+    font-family: 'Sacramento', cursive;
+    color: #FFFFFF;
+    text-align: center;
 
+
+
+}
+.cole{
+    background-color: #CBD6E7;
+}
+.a1{
+    padding-left: 10px;
+}
+.bars{
+
+}
+.icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.text_center{
+    text-align: center;
+}
+
+.pa{
+    margin: 5px 0 12px 0;
+}
+.nav.show{
+    transition: max-height .2s ease-in-out;
+    max-height: 100vh;
+    overflow:hidden ;
+}
+.nav{
+    transition: max-height .2s ease-in-out;
+    overflow:hidden;
+    max-height: 0;
+
+}
+.container,.row[ class*='col']{
+    transition: max-width.4s ease-in-out;
+}
+
+.container > .row{
+    margin-top: 10rem;
+}
 
 @media all and (min-width: 322px)
     .container{
