--- a/css/amanda_styles.css
+++ b/css/amanda_styles.css
@@ -43,20 +43,16 @@ img {
 }
 
 /*Farver*/
-.bg-primary{
-    background-color: #f7fbff;
+.bg-secondary{
+    background-color: #A6CB9C;
 }
 
 .text-primary{
-    color: #1d1d1d;
-}
-
-.bg-secondary{
-    background-color: #9fe386;
+    color: #333333;
 }
 
 .text-secondary{
-    color: #f7fbff;
+    color: #FFFFFF;
 }
 
 /*Skrifttyper*/
@@ -132,3 +128,50 @@ img {
     }
 }
 /*Topbar slut*/
+
+/*Kontakt os*/
+.kontakt_os{
+    padding: 40px;
+}
+
+/*Tlf og mail*/
+.tlf_mail{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.tlf{
+    padding-top: 70px;
+    padding-bottom: 20px;
+}
+
+.mail{
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+
+/*Har du spørgsmål?*/
+.har_du_spoergsmaal{
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+
+/*Spørgsmålskasser*/
+.tekst_boks{
+    border: 1px solid;
+    border-radius: 5px;
+}
+
+.send_tekst{
+    background-color: #7ACDD0;
+    border: 1px solid;
+    border-radius: 5px;
+}
+
+.send_knap {
+    padding-bottom: 30px;
+}
+
+
