--- a/css/loay_styles.css
+++ b/css/loay_styles.css
@@ -162,7 +162,27 @@ img {
     font-family: Josefin Sans, sans-serif;
 
 }
+.iphon{
+    background-image: url(../images/iPhone_Showcase.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 320px;
 
+}
+.samsung{
+    background-image: url(../images/Samsung_Showcase.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 320px;
+}
+.btn2{
+    background-color: #FFFFFF;
+    color: #333333;
+    background-size: 30px;
+    margin-bottom: 1.5rem;
+}
 
 @media all and (min-width:992px ){
     .nav{
