--- a/css/sophie_styles.css
+++ b/css/sophie_styles.css
@@ -73,9 +73,9 @@ img {
 }
 
 .image-small{
-    width: 300px;
-    height: 400px;
-    background-color: lightgrey;
+    min-width: 300px;
+    min-height: 400px;
+    background-color: white;
    align-content: center;
     display: flex;
     flex-direction: column;
