tilføjet fond til text til shopbilleder

--- a/css/sophie_styles.css
+++ b/css/sophie_styles.css
@@ -129,6 +129,7 @@ img {
 .image-small,.p.h2{
     align-items: center;
     margin-top: 0.5rem;
+font-family:'Josefin Sans', sans-serif;
 
 }
 
@@ -139,6 +140,8 @@ img {
 }
 
 
+
+
 .kurv{
     background-color: lightgreen;
     color: white;
@@ -147,6 +150,8 @@ img {
    text-align: center;
     margin-top: 0.5rem;
     margin-bottom: 2rem;
+    font-family: 'Josefin Sans', sans-serif;
+
 
 }
 
