--- a/css/loay_styles.css
+++ b/css/loay_styles.css
@@ -12,12 +12,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0; /* Ingen ydre margen fra overskrifter */
     padding: 0; /* Ingen indre margen fra overskrifter */
 }
-a{
-    text-decoration: none;
-    color: #FFFFFF;
-     font-family: 'Josefin Sans', sans-serif;
-    font-size: 39px;
-}
+
 
 ul, ol {
     margin: 2px 10px 2px 10px; /* Mindre margen på punkter */
@@ -40,31 +35,24 @@ img {
     max-width: 100%; /* Bredde må maks fylde 100% */
     height: auto; /* Højden skal tilpasse sig */
 }
+/*nav*/
 .logo{
     font-size: 46px;
     font-family: 'Sacramento', cursive;
     color: #FFFFFF;
-
-
-
 }
+a{
+    text-decoration: none;
+    color: #FFFFFF;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 29px;
+}
+
 .cole{
     background-color: #CBD6E7;
 }
 .a1{
     padding-left: 10px;
-}
-.bars{
-
-}
-.icon{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.text_center{
-    text-align: center;
 }
 
 .pa{
@@ -91,6 +79,7 @@ img {
 .container > .row{
     margin-top: 10rem;
 }
+/*text*/
 .h11{
     font-family: 'Josefin Sans', sans-serif;
     font-size:30px;
@@ -133,6 +122,7 @@ img {
     border: 1px solid;
     border-radius: 5px;
 }
+/*footer*/
 .color2{
     background-color: #F4F4F4;
 }
@@ -159,8 +149,8 @@ img {
     color: #FFFFFF;
     font-size: 13px;
     font-family: Josefin Sans, sans-serif;
-
 }
+/*mellemside*/
 .iphon{
     background-image: url(../images/iPhone_Showcase.jpeg);
     background-size: cover;
@@ -182,6 +172,7 @@ img {
     background-size: 30px;
     margin-bottom: 1.5rem;
 }
+/*indkøb*/
 .indkøb label{
     font-size: 26px;
     font-family: Josefin Sans, sans-serif;
