--- a/css/sophie_styles.css
+++ b/css/sophie_styles.css
@@ -97,6 +97,7 @@ img {
     display: flex;
     flex-direction: column;
 
+
 }
 
 .container, .row [class*='col']{
@@ -161,6 +162,7 @@ font-family:'Josefin Sans', sans-serif;
     margin-top: 0.5rem;
     margin-bottom: 2rem;
     font-family: 'Josefin Sans', sans-serif;
+    font-size: 20px;
 
 
 }
