tilføjet margin til text i fluid-container

--- a/css/sophie_styles.css
+++ b/css/sophie_styles.css
@@ -150,9 +150,13 @@ font-family:'Josefin Sans', sans-serif;
 
 }
 
+.text {
+    margin-top: 5rem;
+}
 
-
-
+.text2{
+    margin-top: 1rem;
+}
 .kurv{
     background-color: lightgreen;
     color: white;
