--- a/css/sophie_styles.css
+++ b/css/sophie_styles.css
@@ -147,6 +147,7 @@ font-family:'Josefin Sans', sans-serif;
 .image-small,.h3{
     align-items: center;
     margin-top: 2rem;
+    font-family: 'Josefin Sans', sans-serif;
 
 }
 
@@ -212,7 +213,6 @@ font-family:'Josefin Sans', sans-serif;
     transition: max-height .2s ease-in-out;
     overflow:hidden;
     max-height: 0;
-   background-color:;
 
 }
 .container,.row[ class*='col']{
@@ -222,6 +222,9 @@ font-family:'Josefin Sans', sans-serif;
 .container > .row{
     margin-top: 10rem;
 }
+
+
+
 
 
 .color2{
@@ -253,11 +256,11 @@ font-family:'Josefin Sans', sans-serif;
 
 }
 
-@media all and (min-width: 322px)
+@media all and (min-width: 322px){
     .container{
 
     }
-
+}
 @media all and (min-width: 992px){
     .nav{
         max-height: none;
