--- a/css/sophie_styles.css
+++ b/css/sophie_styles.css
@@ -53,7 +53,7 @@ img {
 .text-primary{
     color: white;
 }
-.text-center{
+.text-white {
     color: white;
 }
 .bg-secondary{
@@ -157,16 +157,21 @@ font-family:'Josefin Sans', sans-serif;
 .text2{
     margin-top: 1rem;
 }
+
+
 .kurv{
     background-color: lightgreen;
     color: white;
-    height: 30px;
+    height: auto;
     width: 125px;
-   text-align: center;
+    text-align: center;
     margin-top: 0.5rem;
     margin-bottom: 2rem;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 20px;
+    text-decoration: none;
+    padding: 10px 0;
+    border-radius: 5px;
 
 
 }
@@ -212,7 +217,7 @@ font-family:'Josefin Sans', sans-serif;
     transition: max-height .2s ease-in-out;
     overflow:hidden;
     max-height: 0;
-   background-color:;
+
 
 }
 .container,.row[ class*='col']{
@@ -253,15 +258,16 @@ font-family:'Josefin Sans', sans-serif;
 
 }
 
-@media all and (min-width: 322px)
-    .container{
+@media all and (min-width: 322px) {
+    .container {
 
     }
 
-@media all and (min-width: 992px){
-    .nav{
-        max-height: none;
+    @media all and (min-width: 992px) {
+        .nav {
+            max-height: none;
+        }
+
+
     }
-
-
 }
