--- a/css/loay_styles.css
+++ b/css/loay_styles.css
@@ -115,7 +115,8 @@ a{
 .btn1 {
     background-color: #E4D0CD;
     border: 1px solid;
-    border-radius: 5px;
+    border-radius: 10px;
+    padding: 5px;
 }
 
 .input{
@@ -195,6 +196,12 @@ h1{
 p{
   font-size: 22px;
     font-family:Josefin Sans, sans-serif;
+}
+.show1{
+
+    object-fit: cover;
+    width: 100vw;
+    height: 400px;
 }
 
 @media all and (min-width:992px ){
