--- a/css/navogfooter.css
+++ b/css/navogfooter.css
@@ -104,3 +104,9 @@ a{
     font-size: 13px;
     font-family: Josefin Sans, sans-serif;
 }
+@media all and (min-width:992px ){
+    .nav{
+        max-height: none;
+    }
+
+}
