--- a/css/loay_styles.css
+++ b/css/loay_styles.css
@@ -122,6 +122,7 @@ a{
 .input{
     border: 1px solid;
     border-radius: 5px;
+    width: 45vw;
 }
 /*footer*/
 .color2{
@@ -158,6 +159,7 @@ a{
     background-repeat: no-repeat;
     width: 100%;
     height: 320px;
+    background-position: center;
 
 }
 .samsung{
@@ -166,6 +168,7 @@ a{
     background-repeat: no-repeat;
     width: 100%;
     height: 320px;
+    background-position:inherit;
 }
 .btn2{
     background-color: #FFFFFF;
