--- a/css/mikkel_styles.css
+++ b/css/mikkel_styles.css
@@ -101,7 +101,15 @@ img {
     flex-direction: column;
 }
 
+.image-small,p{
+    font-size: 20px;
+    font-family: 'Josefin Sans', sans-serif;
+}
 
+.image-small,h2{
+    font-size: 20px;
+    font-family: 'Josefin Sans', sans-serif;
+}
 
 
 .container, .row [class*='col']{
