"Tilbage til forsiden" link

--- a/css/amanda_styles.css
+++ b/css/amanda_styles.css
@@ -131,3 +131,15 @@ img {
 }
 
 
+/*-------------------------------Tak for spørgsmål---------------------------*/
+/*.tilbage_knap{*/
+/*    background-color: #f8bb60;*/
+/*    border: 1px solid;*/
+/*    border-radius: 5px;*/
+/*    padding: 10px;*/
+/*    padding-left: 20px;*/
+/*    padding-right: 20px;*/
+
+/*.tilbage_knap_padding {*/
+/*    padding-bottom: 50px;*/
+/*}*/
