Tilføjet flere Shopbilleder til Iphone og Samsung-shopsiderne

--- a/css/sophie_styles.css
+++ b/css/sophie_styles.css
@@ -138,6 +138,31 @@ img {
 }
 
 
+.coverbillede5{
+    margin-top: 2rem;
+    height: 275px;
+    width: 150px;
+}
+
+.coverbillede6{
+    margin-top: 2rem;
+    height: 275px;
+    width: 150px;
+}
+
+.coverbillede7{
+    margin-top: 2rem;
+    height: 275px;
+    width: 150px;
+}
+
+.coverbillede8{
+    margin-top: 2rem;
+    height: 275px;
+    width: 150px;
+}
+
+
 /*Margin på "Samsung" text i farvet container*/
 .text {
     margin-top: 5rem;
