--- a/css/mikkel_styles.css
+++ b/css/mikkel_styles.css
@@ -142,6 +142,30 @@ img {
     width: 150px;
 }
 
+.coverbillede5{
+    margin-top: 2rem;
+    height: 275px;
+    width: 150px;
+}
+
+.coverbillede6{
+    margin-top: 2rem;
+    height: 275px;
+    width: 150px;
+}
+
+.coverbillede7{
+    margin-top: 2rem;
+    height: 275px;
+    width: 150px;
+}
+
+.coverbillede8{
+    margin-top: 2rem;
+    height: 275px;
+    width: 150px;
+}
+
 .image-small,.p.h2{
     align-items: center;
     margin-top: 0.5rem;
