Tilføjet endnu et shopbilledet

--- a/css/mikkel_styles.css
+++ b/css/mikkel_styles.css
@@ -166,6 +166,12 @@ img {
     width: 150px;
 }
 
+.coverbillede9{
+    margin-top: 2rem;
+    height: 275px;
+    width: 150px;
+}
+
 .image-small,.p.h2{
     align-items: center;
     margin-top: 0.5rem;
