--- a/css/sophie_styles.css
+++ b/css/sophie_styles.css
@@ -162,6 +162,12 @@ img {
     width: 150px;
 }
 
+.coverbillede9{
+    margin-top: 2rem;
+    height: 275px;
+    width: 150px;
+}
+
 
 /*Margin på "Samsung" text i farvet container*/
 .text {
