--- a/css/amanda_styles.css
+++ b/css/amanda_styles.css
@@ -132,14 +132,16 @@ img {
 
 
 /*-------------------------------Tak for spørgsmål---------------------------*/
-/*.tilbage_knap{*/
-/*    background-color: #f8bb60;*/
-/*    border: 1px solid;*/
-/*    border-radius: 5px;*/
-/*    padding: 10px;*/
-/*    padding-left: 20px;*/
-/*    padding-right: 20px;*/
+.tilbage_knap {
+    background-color: #f8bb60;
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: medium;
+}
 
-/*.tilbage_knap_padding {*/
-/*    padding-bottom: 50px;*/
-/*}*/
+.tilbage_knap_padding {
+    padding-bottom: 50px;
+}
