Jeg har givet tekst mere padding + centreret tekst også. Knappen har fået en border-radius på 5 px. Skift bg på iPhone Covers div.

--- a/css/mikkel_styles.css
+++ b/css/mikkel_styles.css
@@ -216,6 +216,7 @@ img {
     border: none;
     font-family: "Josefin Sans";
     font-size: 20px;
+    font-weight: bold;
 
 }
 
@@ -226,12 +227,25 @@ img {
     border: none;
     font-family: "Josefin Sans";
     font-size: 18px;
+    font-weight: bold;
 }
 
 .password {
     font-size: 18px;
+    font-weight: bold;
 }
 
+.password2 {
+    font-weight: bold;
+}
+
+.brugernavn {
+    font-weight: bold;
+}
+
+.tekst20 {
+    font-weight: bold;
+}
 
 
                                                     /*Css til topbar*/
