--- a/css/sophie_styles.css
+++ b/css/sophie_styles.css
@@ -65,7 +65,7 @@ img {
     height: 150px;
     text-align: center;
 }
-.container-fluid,.p1{
+.container-fluid,.h1{
     font-family: "Josefin Sans Medium";
     font-size: 45px;
 }
